# image-satellite-computer-vision

./: .gitignore  README.md  pyproject.toml
conf/base/: parameters_data_engineering.yml
notebooks/: 1-data-analyze.ipynb
src/image_satellite_computer_vision/: __init__.py  __main__.py
src/image_satellite_computer_vision/pipelines/data_engineering/: __init__.py  nodes.py  pipeline.py
tests/pipelines/data_engineering/: test_pipeline.py
