[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.9"
name = "image_satellite_computer_vision"
readme = "README.md"
dynamic = [ "version",]
dependencies = [
 "ipython>=8.10",
 "jupyterlab>=3.0",
 "notebook",
 "kedro[jupyter]~=0.19.10",
 "kedro-datasets[pandas-csvdataset, pandas-exceldataset, pandas-parquetdataset, plotly-plotlydataset, plotly-jsondataset, matplotlib-matplotlibwriter]>=3.0",
 "kedro-viz>=6.7.0",
 "scikit-learn~=1.5.1",
 "seaborn~=0.12.1",
]

[project.scripts]
image-satellite-computer-vision = "image_satellite_computer_vision.__main__:main"

[tool.kedro]
package_name = "image_satellite_computer_vision"
project_name = "image-satellite-computer-vision"
kedro_init_version = "0.19.10"
tools = "['Linting', 'Testing', 'Data Structure', 'Kedro Viz']"
example_pipeline = "False"
source_dir = "src"

[tool.ruff]
line-length = 88
show-fixes = true
select = [ "F", "W", "E", "I", "UP", "PL", "T201",]
ignore = [ "E501",]

[project.entry-points."kedro.hooks"]

[tool.pytest.ini_options]
addopts = "--cov-report term-missing --cov src/image_satellite_computer_vision -ra"

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = [ "pragma: no cover", "raise NotImplementedError",]

[tool.ruff.format]
docstring-code-format = true

[tool.setuptools.dynamic.version]
attr = "image_satellite_computer_vision.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.11.0",
]
